--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <body>
 	<header class="main-header">
 		<div class="logo">
-			<img src="#" width="120" height="40" alt="Логотип Барбершоп">
+			<a href="#"><img src="#" width="120" height="40" alt="Логотип Барбершоп"></a>
 		</div>
 		<div class="main-menu">
 			<ul class="navigation">
@@ -18,89 +18,104 @@
 			</ul>
 		</div>
 		<div class="customer-entrance">
-			<img src="#" width="20" height="20" alt="Вход">
 			<a href="#">ВХОД</a>
 		</div>
 	</header>
    	<main class="container">
-   		<div class="breadcrumbs">
-   			<h1>СРЕДСТВА ДЛЯ УХОДА</h1> 
-   			<ul>
-   				<li><a href="#">ГЛАВНАЯ</a></li>
-   				<li><a href="#">МАГАЗИН</a></li>
-   				<li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
-   			</ul>
-   		</div>
-   		<div class="check-menu">
-   			<div class="vendor">
-   				<h2>ПРОИЗВОДИТЕЛИ</h2>
-   				<form class="vendor-check">
-   					<input type="checkbox"><label>BAXTER OF CALIFORNIA</label>
-   					<input type="checkbox"><label>MR NATTY</label>
-   					<input type="checkbox"><label>SUAVECITO</label>
-   					<input type="checkbox"><label>MALIN+GOETZ</label>
-   					<input type="checkbox"><label>MURRAY`S</label>
-   					<input type="checkbox"><label>AMERICAN CREW</label>
-   				</form>
-   			</div>
-   			<div class="item">
-   				<h2>ГРУППЫ ТОВАРОВ</h2>
-   				<form class="item-check">
-   					<input type="checkbox"><label>БРИТВЕННЫЕ ПРИНАДЛЕЖНОСТИ</label>
-   					<input type="checkbox"><label>СРЕДСТВА ДЛЯ УХОДА</label>
-   					<input type="checkbox"><label>АКСЕССУАРЫ</label>
-   				</form>
-   			</div> 
-   			<div class="check-button">
-   				<a href="#">ПОКАЗАТЬ</a>
-   			</div> 
-   		</div>
-   		<div class="conent">
-   			<div>
-   				<img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA">
-   				<p>Набор для путешествий "BAXTER OF CALIFORNIA"</p>
+   		<aside>
+	   		<div class="breadcrumbs">
+	   			<h1>СРЕДСТВА ДЛЯ УХОДА</h1> 
+	   			<ul>
+	   				<li><a href="#">ГЛАВНАЯ</a></li>
+	   				<li><a href="#">МАГАЗИН</a></li>
+	   				<li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
+	   			</ul>
+	   		</div>
+	   		<div class="check-menu">
+	   			<div class="vendor">
+	   				<h2>ПРОИЗВОДИТЕЛИ</h2>
+	   				<form class="vendor-check-1">
+	   					<input type="checkbox"><label>BAXTER OF CALIFORNIA</label>
+	   				</form>
+	   				<form class="vendor-check-2">
+	   					<input type="checkbox"><label>MR NATTY</label>
+	   				</form>
+	   				<form class="vendor-check-3">
+	   					<input type="checkbox"><label>SUAVECITO</label>
+	   				</form>
+	   				<form class="vendor-check-4">
+	   					<input type="checkbox"><label>MALIN+GOETZ</label>
+	   				</form>
+	   				<form class="vendor-check-5">
+	   					<input type="checkbox"><label>MURRAY`S</label>
+	   				</form>
+	   				<form class="vendor-check-6">
+	   					<input type="checkbox"><label>AMERICAN CREW</label>
+	   				</form>
+	   			</div>
+	   			<div class="item">
+	   				<h2>ГРУППЫ ТОВАРОВ</h2>
+	   				<form class="item-check-1">
+	   					<input type="checkbox"><label>БРИТВЕННЫЕ ПРИНАДЛЕЖНОСТИ</label>
+	   				</form>
+	   				<form class="item-check-2">
+	   					<input type="checkbox"><label>СРЕДСТВА ДЛЯ УХОДА</label>
+	   				</form>
+	   				<form class="item-check-3">
+	   					<input type="checkbox"><label>АКСЕССУАРЫ</label>
+	   				</form>
+	   			</div> 
+	   			<div class="check-button">
+	   				<a href="#">ПОКАЗАТЬ</a>
+	   			</div> 
+	   		</div>	
+   		</aside>
+   	 	<div class="conent">
+   			<div class="product-1">
+   				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
+   				<p><a href="#">Набор для путешествий "BAXTER OF CALIFORNIA"<a/></p>
    				<div class="buy-button">
-					<p>2900 РУБ.</p>
+					<span>2900 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div>
-   				<img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA">
-   				<p>Увлажняющий кондиционер "BAXTER OF CALIFORNIA"</p>
+   			<div class="product-2">
+   				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
+   				<p><a href="#">Увлажняющий кондиционер "BAXTER OF CALIFORNIA"<a/></p>
    				<div class="buy-button">
-					<p>750 РУБ.</p>
+					<span>750 РУБ.</span>
+   					<a href="#">КУПИТЬ</a>
+   				</div> 
+   			</div class="product-3">
+   			<div>
+   				<a href="#"><img src="#" width="120" height="120" alt="SUAVECITO"></a>
+   				<p><a href="#">Гель для волос "SUAVECITO"<a/></p>
+   				<div class="buy-button">
+					<span>290 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div>
-   				<img src="#" width="120" height="120" alt="SUAVECITO">
-   				<p>Гель для волос "SUAVECITO"</p>
+   			<div class="product-4">
+   				<a href="#"><img src="#" width="120" height="120" alt="AMERICAN CREW"></a>
+   				<p><a href="#">Глина для укладки волос "AMERICAN CREW"<a/></p>
    				<div class="buy-button">
-					<p>290 РУБ.</p>
+					<span>500 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div>
-   				<img src="#" width="120" height="120" alt="AMERICAN CREW">
-   				<p>Глина для укладки волос "AMERICAN CREW"</p>
+   			<div class="product-5">
+   				<a href="#"><img src="#" width="120" height="120" alt="AMERICAN CREW"></a>
+   				<p><a href="#">Гель для волос "AMERICAN CREW"<a/></p>
    				<div class="buy-button">
-					<p>500 РУБ.</p>
+					<span>300 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div>
-   				<img src="#" width="120" height="120" alt="AMERICAN CREW">
-   				<p>Гель для волос "AMERICAN CREW"</p>
+   			<div class="product-6">
+   				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
+   				<p><a href="#">Набор для бритья "BAXTER OF CALIFORNIA"<a/></p>
    				<div class="buy-button">
-					<p>300 РУБ.</p>
-   					<a href="#">КУПИТЬ</a>
-   				</div> 
-   			</div>
-   			<div>
-   				<img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA">
-   				<p>Набор для бритья "BAXTER OF CALIFORNIA"</p>
-   				<div class="buy-button">
-					<p>3900 РУБ.</p>
+					<span>3900 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
@@ -123,22 +138,22 @@
    	<footer>
    		<div>
    			<div class="contacts">
-   				<p>БАРБЕРШОП "БОРОДИНСКИЙ"</p>
-   				<p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8</p>
-   				<p>
-   					<a href="#">КАК НАС НАЙТИ?</a>
-   				</p>
-   				<p>ТЕЛЕФОН: +7 (495) 666-02-666</p>
+   				<p>БАРБЕРШОП "БОРОДИНСКИЙ"<br>
+   				АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+   				<a href="#">КАК НАС НАЙТИ?</a><br>
+   				ТЕЛЕФОН: +7 (495) 666-02-666</p>
    			</div>
    			<div class="social">
    				<h3>ДАВАТЕ ДРУЖИТЬ!</h3>
-   				<div class="vk"><a href="#">ВКонтакте</a></div>
-   				<div class="fb"><a href="#">FaceBook</a></div>
-   				<div class="insta"><a href="#">Instagram</a></div>
+   				<ul>
+   					<li class="vk"><a href="#">ВКонтакте</a></li>
+   					<li class="fb"><a href="#">FaceBook</a></li>
+   					<li class="insta"><a href="#">Instagram</a></li>
+   				</ul>
    			</div>
    			<div class="copyright">
    				<h3>РАЗРАБОТАНО:</h3>
-   				<p><a href="#">HTMLACADEMY.RU</a></p>
+   				<a href="#">HTMLACADEMY.RU</a>
    			</div>
    		</div>
    	</footer>
