--- a/catalog.html
+++ b/catalog.html
@@ -4,116 +4,105 @@
     <title>HTML Academy: Барбершоп - Каталог</title>
   </head>
   <body>
-	<header class="main-header">
-		<div class="logo">
-			<a href="#"><img src="#" width="120" height="40" alt="Логотип Барбершоп"></a>
-		</div>
-		<div class="main-menu">
-			<ul class="navigation">
-				<li><a href="#">ИНФОРМАЦИЯ</a></li>
-				<li><a href="#">НОВОСТИ</a></li>
-				<li><a href="#">ПРАЙС-ЛИСТ</a></li>
-				<li><a href="#">МАГАЗИН</a></li>
-				<li><a href="#">КОНТАКТЫ</a></li>
-			</ul>
-		</div>
-		<div class="customer-entrance">
-			<a href="#">ВХОД</a>
-		</div>
-	</header>
+	   <header class="main-header">
+   		<div class="logo">
+   			<a href="#"><img src="#" width="120" height="40" alt="Логотип Барбершоп"></a>
+   		</div>
+   		<div class="main-menu">
+   			<ul class="navigation">
+   				<li><a href="#">ИНФОРМАЦИЯ</a></li>
+   				<li><a href="#">НОВОСТИ</a></li>
+   				<li><a href="#">ПРАЙС-ЛИСТ</a></li>
+   				<li><a href="#">МАГАЗИН</a></li>
+   				<li><a href="#">КОНТАКТЫ</a></li>
+   			</ul>
+   		</div>
+   		<div class="customer-entrance">
+   			<a href="#">ВХОД</a>
+   		</div>
+   	</header>
    	<main class="container">
-   		<aside>
-	   		<div class="breadcrumbs">
-	   			<h1>СРЕДСТВА ДЛЯ УХОДА</h1> 
-	   			<ul>
-	   				<li><a href="#">ГЛАВНАЯ</a></li>
-	   				<li><a href="#">МАГАЗИН</a></li>
-	   				<li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
-	   			</ul>
-	   		</div>
-	   		<div class="check-menu">
-	   			<div class="vendor">
-	   				<h2>ПРОИЗВОДИТЕЛИ</h2>
-	   				<form class="vendor-check-1">
-	   					<input type="checkbox"><label>BAXTER OF CALIFORNIA</label>
-	   				</form>
-	   				<form class="vendor-check-2">
-	   					<input type="checkbox"><label>MR NATTY</label>
-	   				</form>
-	   				<form class="vendor-check-3">
-	   					<input type="checkbox"><label>SUAVECITO</label>
-	   				</form>
-	   				<form class="vendor-check-4">
-	   					<input type="checkbox"><label>MALIN+GOETZ</label>
-	   				</form>
-	   				<form class="vendor-check-5">
-	   					<input type="checkbox"><label>MURRAY`S</label>
-	   				</form>
-	   				<form class="vendor-check-6">
-	   					<input type="checkbox"><label>AMERICAN CREW</label>
-	   				</form>
-	   			</div>
-	   			<div class="item">
-	   				<h2>ГРУППЫ ТОВАРОВ</h2>
-	   				<form class="item-check-1">
-	   					<input type="checkbox"><label>БРИТВЕННЫЕ ПРИНАДЛЕЖНОСТИ</label>
-	   				</form>
-	   				<form class="item-check-2">
-	   					<input type="checkbox"><label>СРЕДСТВА ДЛЯ УХОДА</label>
-	   				</form>
-	   				<form class="item-check-3">
-	   					<input type="checkbox"><label>АКСЕССУАРЫ</label>
-	   				</form>
-	   			</div> 
-	   			<div class="check-button">
-	   				<a href="#">ПОКАЗАТЬ</a>
-	   			</div> 
-	   		</div>	
-   		</aside>
+         
+   		<div class="breadcrumbs">
+   	   	<h1>СРЕДСТВА ДЛЯ УХОДА</h1> 
+   	   	<ul>
+   	   		<li><a href="#">ГЛАВНАЯ</a></li>
+   	   		<li><a href="#">МАГАЗИН</a></li>
+   	   		<li><a href="#">СРЕДСТВА ДЛЯ УХОДА</a></li>
+   	   	</ul>
+   	   </div>
+
+   	   <aside class="check-menu">
+            <form>
+        			<div class="vendor">
+            		<h2>ПРОИЗВОДИТЕЛИ</h2>
+            			<input type="checkbox"><label>BAXTER OF CALIFORNIA</label>
+              			<input type="checkbox"><label>MR NATTY</label>
+      	     			<input type="checkbox"><label>SUAVECITO</label>
+              			<input type="checkbox"><label>MALIN+GOETZ</label>
+      	   			<input type="checkbox"><label>MURRAY`S</label>
+      	   			<input type="checkbox"><label>AMERICAN CREW</label>
+       	  		</div>
+         		<div class="item">
+   	   			<h2>ГРУППЫ ТОВАРОВ</h2>
+   	   				<input type="checkbox"><label>БРИТВЕННЫЕ ПРИНАДЛЕЖНОСТИ</label>
+   	   				<input type="checkbox"><label>СРЕДСТВА ДЛЯ УХОДА</label>
+    	   				<input type="checkbox"><label>АКСЕССУАРЫ</label>
+    	   		</div> 
+    	   		<div class="check-button">
+   	   			<a href="#">ПОКАЗАТЬ</a>
+   	   		</div> 
+   		   </form>
+         </aside>
+           
    	 	<div class="conent">
-   			<div class="product-1">
-   				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
-   				<p><a href="#">Набор для путешествий "BAXTER OF CALIFORNIA"<a/></p>
+   			<div class="product">
+   				<a href="#">
+                  <img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA">
+               </a>
+   				<h2>
+                  <a href="#">Набор для путешествий "BAXTER OF CALIFORNIA"<a/>
+               </h2>
    				<div class="buy-button">
-					<span>2900 РУБ.</span>
+					   <span>2900 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div class="product-2">
+   			<div class="product">
    				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
-   				<p><a href="#">Увлажняющий кондиционер "BAXTER OF CALIFORNIA"<a/></p>
+   				<h2><a href="#">Увлажняющий кондиционер "BAXTER OF CALIFORNIA"<a/></h2>
    				<div class="buy-button">
 					<span>750 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
-   			</div class="product-3">
+   			</div class="product">
    			<div>
    				<a href="#"><img src="#" width="120" height="120" alt="SUAVECITO"></a>
-   				<p><a href="#">Гель для волос "SUAVECITO"<a/></p>
+   				<h2><a href="#">Гель для волос "SUAVECITO"<a/></h2>
    				<div class="buy-button">
 					<span>290 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div class="product-4">
+   			<div class="product">
    				<a href="#"><img src="#" width="120" height="120" alt="AMERICAN CREW"></a>
-   				<p><a href="#">Глина для укладки волос "AMERICAN CREW"<a/></p>
+   				<h2><a href="#">Глина для укладки волос "AMERICAN CREW"<a/></h2>
    				<div class="buy-button">
 					<span>500 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div class="product-5">
+   			<div class="product">
    				<a href="#"><img src="#" width="120" height="120" alt="AMERICAN CREW"></a>
-   				<p><a href="#">Гель для волос "AMERICAN CREW"<a/></p>
+   				<h2><a href="#">Гель для волос "AMERICAN CREW"<a/></h2>
    				<div class="buy-button">
 					<span>300 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
    			</div>
-   			<div class="product-6">
+   			<div class="product">
    				<a href="#"><img src="#" width="120" height="120" alt="BAXTER OF CALIFORNIA"></a>
-   				<p><a href="#">Набор для бритья "BAXTER OF CALIFORNIA"<a/></p>
+   				<h2><a href="#">Набор для бритья "BAXTER OF CALIFORNIA"<a/></h2>
    				<div class="buy-button">
 					<span>3900 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
