--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
    		</div>
    	</header>
    	<main class="container">
-         
+
    		<div class="breadcrumbs">
    	   	<h1>СРЕДСТВА ДЛЯ УХОДА</h1> 
    	   	<ul>
@@ -75,8 +75,8 @@
 					<span>750 РУБ.</span>
    					<a href="#">КУПИТЬ</a>
    				</div> 
-   			</div class="product">
-   			<div>
+   			</div>
+   			<div class="product">
    				<a href="#"><img src="#" width="120" height="120" alt="SUAVECITO"></a>
    				<h2><a href="#">Гель для волос "SUAVECITO"<a/></h2>
    				<div class="buy-button">
@@ -110,16 +110,16 @@
    			</div>
    		</div> 
    		<div class="page-navigation">
-   			<div class="p1">
+   			<div class="pn">
    				<a href="#">1</a>
    			</div>
-   			<div class="p2">
+   			<div class="pn">
    				<a href="#">2</a>
    			</div>
-   			<div class="p3">
+   			<div class="pn">
    				<a href="#">3</a>
    			</div>
-   			<div class="p4">
+   			<div class="pn">
    				<a href="#">4</a>
    			</div>
    		</div>         
